lib_LTLIBRARIES=libctest.la

include_HEADERS =           \
    ctest_buf.h              \
    ctest_hash.h             \
    ctest_pool.h             \
    ctest_string.h

libctest_la_SOURCES =       \
    ctest_buf.c              \
    ctest_hash.c             \
    ctest_pool.c             \
    ctest_string.c
